Fix Clear All button being off screen (temp fix)

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
     display: flex;
     /* flex-basis: max-content; */
     width: 100%;
+    height: 8em; /* temp */
     justify-content: center;
     /* gap: 10px; */
     /* border: 1px solid blue; */
